recursion.cons.lessons.recursion.cons.Length.scala.error
length:5: error: not found: value longueur
  }else return 1+longueur(l) 
                 ^